--- a/estilo/base.css
+++ b/estilo/base.css
@@ -1,25 +1,21 @@
 @import url(reset.css);
+:root {
+    --cor-fundo-barra: rgb(24, 24, 223);
+
+}
 .barra{
     width: 100vw;
 }
 .barra_conteudo{
-    background-color: rgb(0, 144, 180);
+    background-color: var(--cor-fundo-barra);
     width: 100vw;
     height: 70px;
+    flex-direction: column;
+        
     display: flex;
-    flex-direction: row;
-    justify-content: end;
-    color: aliceblue;
-    box-shadow: 3px 5px 10px  rgb(21, 21, 236);
+    color: rgb(255, 255, 255);
+    box-shadow: 3px 5px 10px  rgb(12, 193, 206);
 
-}
-.btn{
-    background-color: rgb(255, 255, 255);
-    cursor: pointer;
-
-}
-.login button {
-    border-radius: 5px;
 }
 .barra_info{
     width: 50vw;
@@ -27,4 +23,41 @@
     justify-content: center;
     align-items: center;
     font-size: 25px;
+}
+.campoInput {
+    width: 200px;
+    height: 30px;
+    position: relative; 
+    margin: 3rem 0;
+} 
+.campoInput input {
+    position: absolute;
+    inset: 0;
+    background-color: transparent;
+    padding: 0 1rem;
+    font-size: 1rem;
+    outline: none;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: .5rem;
+    color: black;
+}
+.campoInput label {
+    position: relative;
+    top: 30%;
+    left: 30%;
+    transform: translateY(-30%);
+    font-size: 1rem;
+    color: rgb(250, 250, 250);
+    font-size: 1rem;
+    padding: 0 .3rem;
+    background-color: var(--cor-fundo-barra);
+    transition: 200ms ease-in-out top,
+                200ms ease-in-out font-size,
+                200ms ease-in-out color;
+}
+.campoInput input:focus + label,
+.campoInput input:valid + label{
+    top: -10px;
+    font-size: .8rem;
+    color: rgb(252, 252, 252);
 }
